# model-deployment-operator

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yaml  kube.Taskfile.yaml  pyproject.toml
docker/: Taskfile.yaml
docker/jobs/: Dockerfile
docker/operator/: Dockerfile
example/: config-map-operator.yaml  md-custom-job.yaml  md-source-mlflow.yaml  md-source-s3.yaml  model-deployment.yaml
helm/: values.yaml
helm/templates/: crd-model-deployment.yaml  deployment.yaml  rbac.yaml  service.yaml
model-deployment-operator/: Chart.yaml
model-deployment-operator/templates/: _helpers.tpl  deployment.yaml
model_deployment_operator/: crd_generator.py
model_deployment_operator/controller/: model-deployment-operator.py  templates.py
model_deployment_operator/controller/templates/: job-operator.yaml.jinja
model_deployment_operator/crd/: model.py  schemabase.py
model_deployment_operator/jobs/: s3_to_triton.py
scripts/localstack/init/: setup_bucket.sh
src/: entrypoint.sh  model-deployment-operator.py
src/crd/: model.py  model_deployment_crd_generator.py  schemabase.py
src/jobs/: triton.py
src/kube_crd_generator/: base.py  schemabase.py
src/model_deployment_operator/: entrypoint.sh  helpers.py  operator.py
src/model_deployment_operator/crd/: __main__.py  model.py
src/model_deployment_operator/jobs/: s3_to_triton.py
src/model_deployment_operator/renderer/: render.py  s3.py
src/operator/: job.py  model-deployment-operator.py  templates.py  triton_client.py
src/operator/templates/: job-operator.yaml  job-user-provided.yaml  job.yaml
src/proto2converter/: __main__.py  converter.py
src/triton-model-config-schema/r24.01-r24.05/: scheme.json
testing/: repository.py
testing/triton-chart/: Chart.yaml  triton-values.yaml  values.yaml
testing/triton-chart/templates/debug/: deployment.yaml
testing/triton-chart/templates/triton/: deployment.yaml  service.yaml
tests/: conftest.py  test_convert.py  test_model_management.py  test_smoke.py  test_templates.py
tests/controller/: test_templates.py
tests/jobs/: test_s3_to_triton.py
tests/test_convert/: config.pbtxt
